<resources>
    <string name="app_name">ExpenseTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">%s</string>
    <string name="expense">%s</string>
    <string name="balance">%s</string>

    <string name="fab_add_transaction">Add Transaction</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="input_hint_amount">Amount</string>
    <string name="input_hint_note">Note</string>
    <string name="button_text_save_transaction">Save Transaction</string>
    <string name="button_add_reminder">Add Reminder</string>
    <string name="input_hint_title">Title</string>
    <string name="input_hint_date">Date</string>
    <string name="input_hint_time">Time</string>
    <string name="input_hint_category">Category</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_expense_date">Date</string>
    <string name="text_createdAt">Created At</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_category">Category</string>
    <string name="text_expense_note">Note</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_edit">Edit</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="input_hint_transaction_type">Transaction Type</string>
    <string name="fab_text_reminder">Reminder</string>

    <string name="ui_header">Theme</string>


    <string name="ui_mode">Select Theme</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>